# MIK32_TFLM_Speech_commands

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  README_MICRO_SPEECH.md  dma_docs.txt  interrupts.txt  shot_no_1.txt  shot_no_2.txt  shot_yes_1.txt  shot_yes_2.txt  timer32_docs.txt
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  adc_ram_capture.c  adc_ram_capture.h  app_types.h  circular_buffer.c  circular_buffer.h  debug_io.cc  main.c  mik32_tflm_log.c  startup.c  trap_entry.S
cmake/: toolchain_config.cmake
examples/: shot_no_2.txt  shot_yes_1.txt  shot_yes_2.txt
micro_speech/models/: model.cc
ml/: CMakeLists.txt  feature_extractor.c  feature_extractor.h  kiss_fft_link_test.cc  kiss_fft_link_test.h  micro_frontend_tables.h  model_data.cc  model_data.h  spectrogram_kiss.cc  spectrogram_kiss.h  tflm_wrapper.cc  tflm_wrapper.h
ml/tools/: analyse_cols.py  plot_tensor.py  verify_spectrogram.py
